ADjusted image sizing to avoid overflow on the x-axis

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -32,7 +32,7 @@
 }
 
 #coffee-contain{
-    height: 70vh;
+    height: 50vh;
     margin: auto;
     margin-top: 100px;
 }
